Fix for bug 335856 (Can't easily put caret in this designmode iframe testcase (caret doesn't show up)), also fixes bug 393568 (blocking1.9+) and bug 386872. r/sr=jst.